# snake-game

./: .gitignore  CMakeLists.txt  README.md  generate_compile_commands.sh
include/: AssetManager.hpp  GameLoop.hpp  Menu.hpp  State.hpp  StateMachine.hpp
resources/fonts/: License.txt
src/: AssetManager.cpp  GameLoop.cpp  StateMachine.cpp  main.cpp
